Seeders and endpoint improvements
